# dsc.rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY.md  dsc.example.toml  mkdocs.yml  todo.md
.github/: dependabot.yml
.github/workflows/: deploy-docs-to-ghpages.yml  publish-crates.yml  release.yml
completions/: _dsc  dsc.bash  dsc.fish  dsc.zsh
docs/: analytics.md  group.md  harden.md  index.md  invite.md  post.md  topic.md  user.md
docs/stylesheets/: extra.css
spec/: analytics.md  implementation.md  roadmap.md  spec.md
src/: api.rs  cli.rs  config.rs  discourse.rs  lib.rs  main.rs  utils.rs
src/api/: backup.rs  categories.rs  client.rs  emoji.rs  error.rs  groups.rs  invites.rs  models.rs  palettes.rs  plugins.rs  reports.rs  settings.rs  themes.rs  topics.rs  users.rs
src/commands/: analytics.rs  backup.rs  category.rs  common.rs  completions.rs  emoji.rs  group.rs  harden.rs  invite.rs  list.rs  mod.rs  palette.rs  plugin.rs  post.rs  setting.rs  theme.rs  topic.rs  update.rs  user.rs
src/discourse/: emoji.rs  palettes.rs
tests/: add-test.rs  backup-test.rs  category-test.rs  emoji-test.rs  group-test.rs  import-test.rs  list-test.rs  palette-test.rs  plugin-test.rs  theme-test.rs  topic-test.rs  update-test.rs
tests/common/: mod.rs
