[package]
name = "dsc"
version = "0.1.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/pacharanero/dsc.rs"

[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.4"
reqwest = { version = "0.13", features = ["blocking", "json", "multipart", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "0.9"

[dev-dependencies]
tempfile = "3.24"
uuid = { version = "1.20", features = ["v4"] }
