[package]
name = "dsc-rs"
version = "0.2.0"
edition = "2024"
description = "Discourse CLI tool for managing multiple Discourse forums: track installs, run upgrades over SSH, manage emojis, sync topics and categories as Markdown, and more."
license = "MIT"
repository = "https://github.com/pacharanero/dsc"
homepage = "https://github.com/pacharanero/dsc"
readme = "README.md"
keywords = ["discourse", "cli", "forum", "sysadmin", "ssh"]
categories = ["command-line-utilities"]

[lib]
name = "dsc"
path = "src/lib.rs"

[[bin]]
name = "dsc"
path = "src/main.rs"

[workspace]
members = ["."]

[workspace.metadata.dist]
cargo-dist-version = "0.30.3"
ci = "github"
installers = ["shell"]
targets = [
  "x86_64-unknown-linux-gnu",
  "aarch64-unknown-linux-gnu",
  "x86_64-apple-darwin",
  "aarch64-apple-darwin",
  "x86_64-pc-windows-msvc",
]

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.4"
reqwest = { version = "0.13", features = ["blocking", "json", "multipart", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.26"
uuid = { version = "1.21", features = ["v4"] }
