[package]
name = "dsc-rs"
version = "0.8.2"
edition = "2024"
description = "Discourse CLI tool for managing multiple Discourse forums: track installs, run upgrades over SSH, manage emojis, sync topics and categories as Markdown, and more."
license = "MIT"
repository = "https://github.com/pacharanero/dsc"
homepage = "https://github.com/pacharanero/dsc"
readme = "README.md"
keywords = ["discourse", "cli", "forum", "sysadmin", "ssh"]
categories = ["command-line-utilities"]

[lib]
name = "dsc"
path = "src/lib.rs"

[[bin]]
name = "dsc"
path = "src/main.rs"

[workspace]
members = ["."]

# Config for 'dist'
[workspace.metadata.dist]
# The preferred dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.31.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell"]
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Whether to install an updater program
install-updater = false

[dependencies]
anyhow = "1.0"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
csv = "1.4"
reqwest = { version = "0.13", features = ["blocking", "json", "multipart", "form"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "1.0"
indicatif = "0.18"

[dev-dependencies]
tempfile = "3.26"
uuid = { version = "1.21", features = ["v4"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
